--- a/configuracion/setup.properties
+++ b/configuracion/setup.properties
@@ -1,5 +1,6 @@
-#Configuracion de nuestro programa.
-#Mon Apr 21 20:11:41 CEST 2025
+#Ultimos inicios de sesion
+#Mon Apr 21 20:40:17 CEST 2025
+admin=21/04/2025 20\:40\:17
 invitado=desactivado
 rutaLogs=ficheros/log.txt
 rutaProyectos=ficheros/proyectos.txt
