--- a/configuracion/setup.properties
+++ b/configuracion/setup.properties
@@ -1,6 +1,7 @@
-#Ultimos inicios de sesion
-#Mon Apr 21 20:40:17 CEST 2025
-admin=21/04/2025 20\:40\:17
+#Configuracion del programa
+#Mon Apr 21 21:07:38 CEST 2025
+admin=21/04/2025 21\:06\:12
+gestor=21/04/2025 21\:06\:19
 invitado=desactivado
 rutaLogs=ficheros/log.txt
 rutaProyectos=ficheros/proyectos.txt
