--- a/configuracion/setup.properties
+++ b/configuracion/setup.properties
@@ -1,8 +1,10 @@
 #Configuracion del programa
-#Mon Apr 21 21:07:38 CEST 2025
+#Mon Apr 21 21:25:32 CEST 2025
+AlexisPrueba=21/04/2025 21\:21\:30
 admin=21/04/2025 21\:06\:12
-gestor=21/04/2025 21\:06\:19
-invitado=desactivado
+gestor=21/04/2025 21\:12\:26
+inversor=21/04/2025 21\:22\:22
+invitado=activado
 rutaLogs=ficheros/log.txt
 rutaProyectos=ficheros/proyectos.txt
 rutaUsuarios=ficheros/usuarios.txt
