Tablas SQL con inserts de prueba.

--- a/configuracion/setup.properties
+++ b/configuracion/setup.properties
@@ -1,6 +1,9 @@
 #Configuracion del programa
-#Tue Apr 22 13:03:19 CEST 2025
-admin=21/04/2025 20\:40\:17
+#Tue Apr 22 13:02:33 CEST 2025
+AlexisPrueba=22/04/2025 13\:01\:42
+admin=21/04/2025 21\:06\:12
+gestor=21/04/2025 21\:12\:26
+inversor=21/04/2025 21\:22\:22
 invitado=activado
 rutaLogs=ficheros/log.txt
 rutaProyectos=ficheros/proyectos.txt
