Arreglado la recolección de datos inicial de usuarios desde la base de datos al iniciar el programa.

--- a/configuracion/setup.properties
+++ b/configuracion/setup.properties
@@ -1,7 +1,9 @@
-#Configuracion del programa
-#Tue May 27 12:19:38 CEST 2025
+#Ultimos inicios de sesion
+#Tue May 27 21:16:23 CEST 2025
+Admin\ Uno=27/05/2025 21\:13\:57
 AlexisPrueba=22/04/2025 13\:01\:42
-admin=21/04/2025 21\:06\:12
+Gestor\ Uno=27/05/2025 21\:16\:23
+admin=27/05/2025 13\:48\:59
 gestor=21/04/2025 21\:12\:26
 inversor=21/04/2025 21\:22\:22
 invitado=activado
