--- a/configuracion/setup.properties
+++ b/configuracion/setup.properties
@@ -1,9 +1,10 @@
-#Ultimos inicios de sesion
-#Tue May 27 22:14:59 CEST 2025
-Admin\ Uno=27/05/2025 22\:14\:59
+#Configuracion del programa
+#Wed May 28 18:39:00 CEST 2025
+Admin\ Uno=28/05/2025 18\:33\:38
 AlexisPrueba=22/04/2025 13\:01\:42
-Gestor\ Uno=27/05/2025 21\:16\:23
+Gestor\ Uno=27/05/2025 22\:30\:06
 admin=27/05/2025 13\:48\:59
+alexisprueba=28/05/2025 18\:17\:11
 gestor=21/04/2025 21\:12\:26
 inversor=21/04/2025 21\:22\:22
 invitado=activado
