--- a/configuracion/setup.properties
+++ b/configuracion/setup.properties
@@ -1,8 +1,8 @@
-#Configuracion del programa
-#Wed May 28 18:39:00 CEST 2025
-Admin\ Uno=28/05/2025 18\:33\:38
+#Ultimos inicios de sesion
+#Wed May 28 19:32:57 CEST 2025
+Admin\ Uno=28/05/2025 19\:32\:57
 AlexisPrueba=22/04/2025 13\:01\:42
-Gestor\ Uno=27/05/2025 22\:30\:06
+Gestor\ Uno=28/05/2025 19\:06\:37
 admin=27/05/2025 13\:48\:59
 alexisprueba=28/05/2025 18\:17\:11
 gestor=21/04/2025 21\:12\:26
