--- a/configuracion/setup.properties
+++ b/configuracion/setup.properties
@@ -1,5 +1,5 @@
-#Ultimos inicios de sesion
-#Wed May 28 19:32:57 CEST 2025
+#Configuracion del programa
+#Wed May 28 20:14:59 CEST 2025
 Admin\ Uno=28/05/2025 19\:32\:57
 AlexisPrueba=22/04/2025 13\:01\:42
 Gestor\ Uno=28/05/2025 19\:06\:37
