--- a/configuracion/setup.properties
+++ b/configuracion/setup.properties
@@ -1,6 +1,6 @@
-#Configuracion del programa
-#Wed May 28 20:14:59 CEST 2025
-Admin\ Uno=28/05/2025 19\:32\:57
+#Ultimos inicios de sesion
+#Wed May 28 20:27:49 CEST 2025
+Admin\ Uno=28/05/2025 20\:27\:49
 AlexisPrueba=22/04/2025 13\:01\:42
 Gestor\ Uno=28/05/2025 19\:06\:37
 admin=27/05/2025 13\:48\:59
